libgnome-desktop: Add GnomeIdleMonitor

This copy/paste code has long been part of gnome-shell, gnome-session,
gnome-screensaver, and probably other places as well. It deserves a
standard place in gnome-desktop for code deduplication.

https://bugzilla.gnome.org/show_bug.cgi?id=682224